# premium5

./: .gitignore  LICENSE.txt  README.md  index.html  listing.json  pyproject.toml  server.py
.github/workflows/: main.yml
javascripts/: app.js  connection.js  controls.js  debugger.js  faceplate.js  input.js  radio.js  views.js
premium5/: __main__.py  cdc.py  devices.py  digital.py  eeprom.py  emulator.py  fis.py  i2c.py  machine.py  mcu.py  mfsw.py  nec.py  serial.py  spi.py  system.py  timing.py  volume.py  webserver.py
premium5/tests/: test_cdc.py  test_devices.py  test_digital.py  test_fis.py  test_i2c.py  test_mfsw.py  test_nec.py  test_spi.py  test_timing.py  test_volume.py
premium5/web/: index.html
premium5/web/javascripts/: app.js  connection.js  controls.js  faceplate.js  fis.js  mfsw.js
premium5/web/stylesheets/: style.css
stylesheets/: style.css
