[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}

[tool.setuptools.package-data]                                                                                            
premium5 = ["web/**/*"]                                         

[project]
name = "premium5"
version = "1.0.0.dev0"
description = "Volkswagen Premium 5 Radio Emulator"
authors = [
    { name = "Mike Naberezny", email = "mike@naberezny.com" }
]
maintainers = [
    { name = "Mike Naberezny", email = "mike@naberezny.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "BSD License" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Assembly",
    "Topic :: Software Development :: Disassemblers",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
]
dependencies = ["k0dasm", "k0emu"]

[project.scripts]
premium5 = "premium5.__main__:main"
